<resources>
    <string name="app_name">demo1</string>
    <string name="welcome_title">Bienvenido</string>
    <string name="field_nickname">Usuario/Alias</string>
    <string name="field_first_name">Nombre</string>
    <string name="field_last_name">Apellido</string>
    <string name="field_date_of_birth">Fecha de nacimiento</string>
    <string name="field_height">Estatura</string>
    <string name="field_password">Clave</string>
    <string name="btn_register">Registrarme</string>
    <string name="btn_login">Iniciar sesion</string>
    <string name="go_to_login">Ir al inicio de sesion</string>
    <string name="go_to_register">Crear nueva cuenta</string>
    <string name="btn_new_evaluation">Nueva Evaluacion</string>
    <string name="btn_register_evaluation">Registrar Evaluacion</string>
    <string name="btn_delete">Eliminar</string>
    <string name="title_register_evaluation">Registrar Evaluacion</string>
    <string name="btn_back">Volver</string>
    <string name="field_date">Fecha</string>
    <string name="field_weight">Peso</string>
    <string name="text_imc">IMC</string>
    <string name="text_evaluation"> Evaluaciones</string>
    <string name="login_success">Iniciando sesion</string>
    <string name="login_failed">Usuario y/o clave incorrecta</string>
    <string name="btn_logout">Cerrar sesion</string>
    <string name="date_filter">Filtrar por fecha</string>
    <string name="date_from">Desde</string>
    <string name="date_until">Hasta</string>
    <string name="btn_filter">Filtrar</string>
    <string name="empty_field">campo requerido</string>

</resources>