<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EvaluationDetailsActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background_orange">


        <TextView
            android:id="@+id/activity_evaluation_details_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="216dp"
            android:layout_marginBottom="4dp"
            android:text="@string/field_date"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/activity_evaluation_details_text_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/field_weight"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/activity_evaluation_details_text_imc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/text_imc"
            android:textColor="@color/black"
            android:textSize="20sp" />



        <Button
            android:id="@+id/activity_evaluation_details_btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:backgroundTint="@color/button_brown"
            android:text="@string/btn_delete"
            android:textColor="@color/text_white" />

        <Button
            android:id="@+id/activity_evaluation_details_btn_back"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:backgroundTint="@color/dark_orange"
            android:text="@string/btn_back"
            android:textColor="@color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>